@@ -1,0 +1,2 @@
+ALTER TABLE ONLY proxy_autoreg_host ADD listen_ip varchar(39) DEFAULT '' NOT NULL,
+				    ADD listen_port integer DEFAULT '0' NOT NULL;
